<resources>
    <string name="app_name">Group_Finder</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_mygroups">My Groups</string>
    <string name="title_user">User</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>