<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="square.ball.groupfinder_1.ui.Home.HomeGroupFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_group" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="square.ball.groupfinder_1.ui.Search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_calendar"
        android:name="square.ball.groupfinder_1.ui.Calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_mygroups"
        android:name="square.ball.groupfinder_1.ui.MyGroups.MyGroupsFragment"
        android:label="@string/title_mygroups"
        tools:layout="@layout/fragment_my_groups" />
    <fragment

        android:id="@+id/navigation_user"
        android:name="square.ball.groupfinder_1.ui.Users.UsersFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_users" />

</navigation>